app-wp-ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-prd-mysql
  labels:
    app: wp-prd
spec:
  serviceName: wp-prd-mysql
  selector:
    matchLabels:
      app: wp-prd
  template:
    metadata:
      labels:
        app: wp-prd
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 20
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-stretch-wordpress-prd-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: wp-prd-mysql
  labels:
    app: wp-prd
spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    app: wp-prd
---
apiVersion: v1
kind: Service
metadata:
  name: wp-prd-app
  labels:
    app: wp-prd
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: wp-prd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-prd-app
  labels:
    app: wp-prd
spec:
  serviceName: wp-prd-app
  selector:
    matchLabels:
      app: wp-prd
  template:
    metadata:
      labels:
        app: wp-prd
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wp-prd
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 20
        ports:
        - containerPort: 80
          name: wp-prd
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-stretch-wordpress-prd-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wp-prd
  name: wp-prd
  namespace: default
spec:
  host: wordpress-prd.apps.ocp-emea-clu01.coe.net
  port:
    targetPort: 80
  to:
    kind: Service
    name: wp-prd-app
    weight: 100
